@@ -1,3 +1,9 @@
+2008-07-31  Ethan Merritt  <merritt@u.washington.edu>
+
+	* src/plot2d.c (eval_plots) src/graphics.c (do_plot):
+	Histograms did not correctly honor 'set style user increment'.
+	Bugfix.
+
 2008-07-29  Ethan Merritt  <merritt@u.washington.edu>
 
 	* src/wxterminal/wxt_gui.cpp(wxt_set_color) 
